Changed CI-BuildStats to BuildStats everywhere

--- a/BuildStats.Web/ErrorPages/Forbidden.html
+++ b/BuildStats.Web/ErrorPages/Forbidden.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Access Forbidden - CI BuildStats</title>
+    <title>Access Forbidden - BuildStats.info</title>
 </head>
 <body>
     <h1>CI BuildStats</h1>
     <h2>Access Forbidden</h2>
     <p>You are not authorized to view this page.</p>
     <p>
-        Please visit the <a href="https://github.com/dustinmoris/CI-BuildStats">official documentation</a> for further information on how to use this project.
+        Please visit the <a href="https://github.com/dustinmoris/BuildStats">official documentation</a> for further information on how to use this project.
     </p>
 </body>
 </html>
