--- a/BuildStats.Web/ErrorPages/InternalError.html
+++ b/BuildStats.Web/ErrorPages/InternalError.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Internal Error - CI BuildStats</title>
+    <title>Internal Error - BuildStats.info</title>
 </head>
 <body>
     <h1>CI BuildStats</h1>
     <h2>Internal Error</h2>
     <p>The server encountered an internal error while processing your request.</p>
     <p>
-        Please visit the <a href="https://github.com/dustinmoris/CI-BuildStats">official documentation</a> for further information on how to use this project.
+        Please visit the <a href="https://github.com/dustinmoris/BuildStats">official documentation</a> for further information on how to use this project.
     </p>
 </body>
 </html>
