--- a/BuildStats.Web/ErrorPages/BadRequest.html
+++ b/BuildStats.Web/ErrorPages/BadRequest.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bad Request - CI BuildStats</title>
+    <title>Bad Request - BuildStats.info</title>
 </head>
 <body>
     <h1>CI BuildStats</h1>
     <h2>Bad Request</h2>
     <p>Your browser sent a request that this server could not understand.</p>
     <p>
-        Please visit the <a href="https://github.com/dustinmoris/CI-BuildStats">official documentation</a> for further information on how to use this project.
+        Please visit the <a href="https://github.com/dustinmoris/BuildStats">official documentation</a> for further information on how to use this project.
     </p>
 </body>
 </html>
