Revert "Changed CI-BuildStats to BuildStats everywhere"
This reverts commit 0118d18da5d7fc6d93aaca1685df36b2a1aacf7c.

--- a/BuildStats.Web/ErrorPages/NotFound.html
+++ b/BuildStats.Web/ErrorPages/NotFound.html
@@ -1,16 +1,17 @@
 ﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Not Found - BuildStats.info</title>
+    <title>Not Found - CI BuildStats</title>
 </head>
 <body>
     <h1>CI BuildStats</h1>
     <h2>Not Found</h2>
     <p>Sorry, the page you have requested may have been moved or deleted.</p>
     <p>
-        Please visit the <a href="https://github.com/dustinmoris/BuildStats">official documentation</a> for further information on how to use this project.
+        Please visit the <a href="https://github.com/dustinmoris/CI-BuildStats">official documentation</a> for further information on how to use this project.
     </p>
 </body>
 </html>
