--- a/BuildStats.Web/ErrorPages/Forbidden.html
+++ b/BuildStats.Web/ErrorPages/Forbidden.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Access Forbidden - CI BuildStats</title>
+    <title>Access Forbidden - BuildStats.info</title>
 </head>
 <body>
     <h1>CI BuildStats</h1>
