--- a/BuildStats.Web/ErrorPages/NotFound.html
+++ b/BuildStats.Web/ErrorPages/NotFound.html
@@ -1,10 +1,9 @@
 ﻿<!DOCTYPE html>
-<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Not Found - CI BuildStats</title>
+    <title>Not Found - BuildStats.info</title>
 </head>
 <body>
     <h1>CI BuildStats</h1>
