More minor changes

--- a/BuildStats.Web/ErrorPages/Forbidden.html
+++ b/BuildStats.Web/ErrorPages/Forbidden.html
@@ -4,9 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Access Forbidden - BuildStats.info</title>
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+    </style>
 </head>
 <body>
-    <h1>CI BuildStats</h1>
+    <h1>BuildStats.info</h1>
     <h2>Access Forbidden</h2>
     <p>You are not authorized to view this page.</p>
     <p>
