--- a/BuildStats.Web/ErrorPages/NotFound.html
+++ b/BuildStats.Web/ErrorPages/NotFound.html
@@ -4,9 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Not Found - BuildStats.info</title>
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+    </style>
 </head>
 <body>
-    <h1>CI BuildStats</h1>
+    <h1>BuildStats.info</h1>
     <h2>Not Found</h2>
     <p>Sorry, the page you have requested may have been moved or deleted.</p>
     <p>
