--- a/BuildStats.Web/ErrorPages/BadRequest.html
+++ b/BuildStats.Web/ErrorPages/BadRequest.html
@@ -4,9 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bad Request - BuildStats.info</title>
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+    </style>
 </head>
 <body>
-    <h1>CI BuildStats</h1>
+    <h1>BuildStats.info</h1>
     <h2>Bad Request</h2>
     <p>Your browser sent a request that this server could not understand.</p>
     <p>
