--- a/BuildStats.Web/ErrorPages/InternalError.html
+++ b/BuildStats.Web/ErrorPages/InternalError.html
@@ -4,9 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Internal Error - BuildStats.info</title>
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+    </style>
 </head>
 <body>
-    <h1>CI BuildStats</h1>
+    <h1>BuildStats.info</h1>
     <h2>Internal Error</h2>
     <p>The server encountered an internal error while processing your request.</p>
     <p>
