--- a/BuildStats.Suave/tests.html
+++ b/BuildStats.Suave/tests.html
@@ -17,12 +17,19 @@
         }
         
         h3 {
-            color: #800000;
+            margin-bottom: 0;
+            padding: .5em;
+            color: #fff;
+            background: #666;
         }
         
         img {
             display: block;
             margin: 1em 0;
+        }
+
+        table {
+            width: 100%;
         }
 
         table th, table td {
@@ -103,6 +110,35 @@
             <tr>
                 <th>Hide Stats</th>
                 <td><img src="/travisci/chart/nunit/nunit?showStats=false" /></td>
+            </tr>
+        </table>
+
+        <h3>CircleCI</h3>
+
+        <table>
+            <tr>
+                <th>Basic</th>
+                <td><img src="/circleci/chart/circleci/frontend" /></td>
+            </tr>
+            <tr>
+                <th>Branch Filter</th>
+                <td><img src="/circleci/chart/circleci/frontend?branch=master" /></td>
+            </tr>
+            <tr>
+                <th>Reduced BuildCount</th>
+                <td><img src="/circleci/chart/circleci/frontend?buildCount=10" /></td>
+            </tr>
+            <tr>
+                <th>Increased BuildCount</th>
+                <td><img src="/circleci/chart/circleci/frontend?buildCount=40" /></td>
+            </tr>
+            <tr>
+                <th>Exclude PullRequests</th>
+                <td><img src="/circleci/chart/circleci/frontend?includeBuildsFromPullRequest=false" /></td>
+            </tr>
+            <tr>
+                <th>Hide Stats</th>
+                <td><img src="/circleci/chart/circleci/frontend?showStats=false" /></td>
             </tr>
         </table>
     </main>
