--- a/BuildStats.Suave/tests.html
+++ b/BuildStats.Suave/tests.html
@@ -13,7 +13,7 @@
 
         main {
             max-width: 600px;
-            margin: 0 auto;
+            margin: 2em auto;
         }
         
         h3 {
@@ -118,29 +118,83 @@
         <table>
             <tr>
                 <th>Basic</th>
-                <td><img src="/circleci/chart/spotify/helios" /></td>
+                <td><img src="/circleci/chart/spotify/helios"/></td>
             </tr>
             <tr>
                 <th>Branch Filter</th>
-                <td><img src="/circleci/chart/spotify/helios?branch=master" /></td>
+                <td><img src="/circleci/chart/spotify/helios?branch=master"/></td>
             </tr>
             <tr>
                 <th>Reduced BuildCount</th>
-                <td><img src="/circleci/chart/spotify/helios?buildCount=10" /></td>
+                <td><img src="/circleci/chart/spotify/helios?buildCount=10"/></td>
             </tr>
             <tr>
                 <th>Increased BuildCount</th>
-                <td><img src="/circleci/chart/spotify/helios?buildCount=40" /></td>
+                <td><img src="/circleci/chart/spotify/helios?buildCount=40"/></td>
             </tr>
             <tr>
                 <th>Exclude PullRequests</th>
-                <td><img src="/circleci/chart/spotify/helios?includeBuildsFromPullRequest=false" /></td>
+                <td><img src="/circleci/chart/spotify/helios?includeBuildsFromPullRequest=false"/></td>
             </tr>
             <tr>
                 <th>Hide Stats</th>
-                <td><img src="/circleci/chart/spotify/helios?showStats=false" /></td>
+                <td><img src="/circleci/chart/spotify/helios?showStats=false"/></td>
             </tr>
         </table>
-    </main>
+
+        <h2>Package Badges</h2>
+
+        <h3>NuGet</h3>
+        <table>
+            <tr>
+                <th>Lanem</th>
+                <td><img src="/nuget/lanem"/></td>
+            </tr>
+            <tr>
+                <th>Guardo</th>
+                <td><img src="/nuget/guardo"/></td>
+            </tr>
+            <tr>
+                <th>Newtonsoft.Json</th>
+                <td><img src="/nuget/Newtonsoft.Json"/></td>
+            </tr>
+            <tr>
+                <th>Moq</th>
+                <td><img src="/nuget/moq"/></td>
+            </tr>
+            <tr>
+                <th>Nunit</th>
+                <td><img src="/nuget/nunit"/></td>
+            </tr>
+            <tr>
+                <th>NSubstitute</th>
+                <td><img src="/nuget/nsubstitute"/></td>
+            </tr>
+            <tr>
+                <th>jQuery</th>
+                <td><img src="/nuget/jQuery"/></td>
+            </tr>
+            <tr>
+                <th>ASP.NET MVC</th>
+                <td><img src="/nuget/microsoft.aspnet.mvc"/></td>
+            </tr>
+            <tr>
+                <th>EntityFramework</th>
+                <td><img src="/nuget/entityframework"/></td>
+            </tr>
+            <tr>
+                <th>NServiceBus.PostgreSQL</th>
+                <td><img src="/nuget/NServiceBus.PostgreSQL?includePreReleases=true"/></td>
+            </tr>
+        </table>
+
+        <h3>MyGet</h3>
+        <table>
+            <tr>
+                <th>neventsocket-prerelease/NEventSocket</th>
+                <td><img src="/myget/neventsocket-prerelease/NEventSocket"/></td>
+            </tr>
+        </table>
+</main>
 </body>
 </html>
