--- a/BuildStats.Suave/tests.html
+++ b/BuildStats.Suave/tests.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="">
+    <meta name="description" content="Little SVG widget to display AppVeyor, TravisCI or CircleCI build history charts and other SVG badges">
     <meta name="author" content="Dustin Moris Gorski, https://dusted.codes/">
-    <title>Buildstats.info</title>
+    <title>BuildStats.info</title>
     <style>
         body {
             font-family: Helvetica, Arial, sans-serif;
@@ -47,11 +47,15 @@
         table tr:nth-child(even) {
              background-color: #fafafa;
         }
+
+        a {
+            color: #c30;
+        }
     </style>
 </head>
 <body>
     <main>
-        <h1>Buildstats.info</h1>
+        <h1>BuildStats.info</h1>
 
         <h2>Build History Chart</h2>
 
@@ -195,6 +199,8 @@
                 <td><img src="/myget/neventsocket-prerelease/NEventSocket"/></td>
             </tr>
         </table>
+
+        <p>BuildStats.info is provided by <a href="https://dusted.codes/">Dustin Moris Gorski</a>.</p>
 </main>
 </body>
 </html>
