changed demo url

--- a/BuildStats.Suave/index.html
+++ b/BuildStats.Suave/index.html
@@ -48,7 +48,7 @@
 
         <h3>Build History Chart</h3>
         <p>Add a build history widget to your public GitHub repository:</p>
-        <img src="/appveyor/chart/dustinmoris/dustedcodes" />
+        <img src="/appveyor/chart/dustinmoris/dustedcodes?branch=master" />
 
 
         <h3>NuGet and MyGet Badges</h3>
