First try of private AppVeyor and private TravisCI support
Also first try of building on a Linux VM on AppVeyor.

--- a/src/BuildStats/pages/tests.html
+++ b/src/BuildStats/pages/tests.html
@@ -116,7 +116,7 @@
                 <td><img src="/travisci/chart/nunit/nunit?showStats=false" /></td>
             </tr>
             <tr>
-                <th>travis-ci.com</th>
+                <th>Travis-CI.com</th>
                 <td><img src="/travisci/chart/martincostello/sqllocaldb?branch=master&includeBuildsFromPullRequest=false"/></td>
             </tr>
         </table>
